2002-01-05  Jamin Gray <jgray@writeme.com> 

	* 2.x/package-list: added contact and version info for galeon, gnomemeeting 

2002-01-05  Jamin Gray <jgray@writeme.com> 

	* 2.x/package-list: added GStreamer and GNOMEMeeting to 5th Toe 

2001-12-09  Jeff Waugh  <jdub@perkypants.org>

	* 2.x/package-list: added applets and small updates
	* releng2html.pl: now uses cvsbase for subsections (crazy)

2001-12-09  Jeff Waugh  <jdub@perkypants.org>

	* releng2html.pl: render specially marked status fields in red for
	  removal, yes this is dispicable, but it's dumb text grokking that humans
	  also have to read.

2001-11-20  Jeff Waugh  <jdub@perkypants.org>

	* 2.x/package-list: gnome-utils update from KevinV (rock!)
	* releng2html.pl: silly datestamp mans (should be fixed)

2001-11-20  Jeff Waugh  <jdub@perkypants.org>

	* 2.x/package-list: additional information c/o Glynn
	* releng2html.pl: and he's been pestering me about this for days...

	<subliminal>Glynn for Foundation Board</subliminal>

2001-11-18  Jeff Waugh  <jdub@perkypants.org>

	* releng3html.pl: Updated, with some "what not to do" help from Gman. ;)
	* 2.x/package-list: With Gman's additions, plus some decrackification for
	  vim users (ie. me).

2001-11-18  Jeff Waugh  <jdub@perkypants.org>

	* releng2html.pl: spam-harvest deterring email address alteration

2001-11-18  Jeff Waugh  <jdub@perkypants.org>

	* 2.x/package-list: added language bindings section

2001-11-18  Jeff Waugh  <jdub@perkypants.org>

	* 2.x/package-list: changed packages for office, added various info

Thu Nov 15 20:06:10 CET 2001 Daniel Veillard <veillard@redhat.com>

	* 2.x/package-list: libxml2 and libxslt info

2001-11-16  Jeff Waugh  <jdub@perkypants.org>

	* 2.x/TODO: needed a 2.x releng todo list :)
	* 2.x/package-list: sawfish info
	* releng2html.pl: s/component/package/ - make it painfully obvious what
	  the point of this is (ie. these can be bits of modules)

2001-11-16  Jeff Waugh  <jdub@perkypants.org>

	* README, 1.x
